Started filling in first project

--- a/aboutme.html
+++ b/aboutme.html
@@ -53,7 +53,7 @@
                                 Hello there! 👋 I'm Athina Stewart, a passionate and enthusiastic MS Computer Science student, 
                                 studying at the <a href="https://www.rit.edu/" target="_blank">Rochester Institute of Technology</a>.<br>
                                 <br>
-                                I have a background in chemical engineering and previously worked in cement manufcaturing at Carib 
+                                I have a background in chemical engineering and previously worked in cement manufacturing at Carib 
                                 Cement, a CEMEX subsidiary. I ventured into the tech space to explore my interest in software engineering, 
                                 and also discoverd a passion for Big Data and Analystics. <br>
                                 <br>
