--- a/project1.html
+++ b/project1.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Project 1</title>
+		<title>Athina Stewart - Software Engineer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -40,21 +40,42 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="aboutme.html">About Me</a></li>
+							<li><a href="https://drive.google.com/file/d/1v81FS_YGe7hk-wWHJMuCZXLnccwxNEtu/view?usp=sharing">Resume</a></li>
 						</ul>
 					</nav>
 
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Project 1!</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<h1>Housing Purchase Recommendation System for Kingston, Jamaica</h1>
+							<span class="image main"><img src="images/houses2 copy.jpg" alt="" /></span>
+
+							<div class="center-box">
+								<h2>End to End Data Science Project | Python, Google Places API, Selenium</h2>
+							</div>
+
+							<h4> The Problem</h4>
+							<p> When purchasing a home, the common paths of searching for the right property would involve employing 
+								a realtor, or flipping through the newspaper to look at ads, where the seller has to pay for each inch
+								 of space their ad takes up. This leads to limited information and the seller will have to contact the
+								  buyer to acquire more information about the house. The buyer also lacks the ability to compare in 
+								  real time, different properties they may be interested in.  </p>
+
+							<h4> The Solution</h4>
+							<p> A housing recommendation system would integrate data from various websites offering a comprehensive 
+								and efficient solution for users searching for properties. By aggregating information from multiple 
+								sources, the system ensures a broader and more diverse set of available properties. This not only 
+								saves users time but also enhances the accuracy of recommendations, leveraging a variety of datasets. 
+								Users can input specific criteria and preferences, receiving personalized and relevant property 
+								suggestions. The system's ability to reduce bias associated with a single source, provide access to 
+								exclusive listings, and facilitate comparison shopping makes it a user-friendly and convenient tool. 
+								Additionally, dynamic updates ensure users have access to the latest information on housing options.   </p>
+
+							<h4> Solution Design</h4>
+							<p> The first step was to aggregate information from various websites, using the Selenium and Beautiful 
+								Soup libraries. 
+							</p>
 						</div>
 					</div>
 
