--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 									<span class="image">
 										<img src="images/car crash.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="project2.html">
 										<h2>Car Crash Data Analysis</h2>
 										<div class="content">
 											<p>NYC OpenData Analysis</p>
