working with responsive images in project 2

--- a/project2.html
+++ b/project2.html
@@ -158,9 +158,9 @@ dtype='object')
                                 - Boroughs with higher enforcement of traffic laws could have less accidents
                                 - Boroughs may have different designs and conditions of infrastructure such as road
                                 design, road maintenance and traffic signals.
-
+                                
                                 <div id="data_type_images">
-                                    <div class="stats-container">
+                                    <div class="image-container">
                                         <img src="images/borough stats.png" alt="Borough Stats">
                                     </div>
                                 </div>
