Added picture for third project tile, and other small changes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Hi! I'm Athina</h1>
+								<div class="intro">
+									<h1>Hi! I'm Athina <img src="images/hummingbird.gif" class="hummingbird image"></h1>
+								</div>
 								<p>I'm an aspiring software engineer, currently pursuing an MS in Computer Science at the Rochester Institute of Technology.</p>
 							</header>
 							<section class="tiles">
@@ -61,7 +63,7 @@
 									<a href="project1.html">
 										<h2>Housing Recommender</h2>
 										<div class="content">
-											<p>Data Science Project</p>
+											<p>Personal Project || Data Science</p>
 										</div>
 									</a>
 								</article>
@@ -72,18 +74,18 @@
 									<a href="project2.html">
 										<h2>Car Crash Data Analysis</h2>
 										<div class="content">
-											<p>NYC OpenData Analysis</p>
+											<p>Pair Project || Data Analysis</p>
 										</div>
 									</a>
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/natural language processing.gif" alt="" />
+										<img src="images/christina-wocintechchat-com-LQ1t-8Ms5PY-unsplash.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="project3.html">
 										<h2>BERT model</h2>
 										<div class="content">
-											<p>Implementation of, and modification of the BERT model.</p>
+											<p>Pair Project || Machine Learning</p>
 										</div>
 									</a>
 								</article>
