--- a/project3.html
+++ b/project3.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Athina Stewart - Software Engineer </title>
+		<title>Athina Stewart - Software Engineer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -36,43 +36,57 @@
 					</header>
 
 				<!-- Menu -->
-                <nav id="menu">
-                    <h2>Menu</h2>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="aboutme.html">About Me</a></li>
-                        <li><a href="https://drive.google.com/file/d/1v81FS_YGe7hk-wWHJMuCZXLnccwxNEtu/view?usp=sharing">Resume</a></li>
-                    </ul>
-                </nav>
+					<nav id="menu">
+						<h2>Menu</h2>
+						<ul>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="aboutme.html">About Me</a></li>
+							<li><a href="https://drive.google.com/file/d/1v81FS_YGe7hk-wWHJMuCZXLnccwxNEtu/view?usp=sharing">Resume</a></li>
+						</ul>
+					</nav>
 
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Wah Gwaan? 🇯🇲</h1>
-							<p><span class="image left"><img src="images/personal.png" alt="" /></span> 
-                                Hello there! 👋 I'm Athina Stewart, a passionate and enthusiastic MS Computer Science student, 
-                                studying at the <a href="https://www.rit.edu/" target="_blank">Rochester Institute of Technology</a>.<br>
+							<h1>Quantization and Pruning of the BERT model</h1>
+							<span class="image main"><img src="images/christina-wocintechchat-com-LQ1t-8Ms5PY-unsplash (1).jpg" alt="" /></span>
+
+							<div class="center-box">
+								<h2>End to End Data Science Project | Python, Google Places API, Selenium</h2>
+							</div>
+
+							<div id="text-wrapper">
+
+                                The full paper for this project can be found <a href="https://drive.google.com/file/d/1WpmSys9bx4c8eKIp97KCL4m1KXh25h4h/view?usp=sharing">here</a>
                                 <br>
-                                I have a background in chemical engineering and previously worked in cement manufacturing at Caribbean Cement 
-                                Compaly Ltd., a CEMEX subsidiary. I ventured into the tech space to explore my interest in software engineering, 
-                                and also discoverd a passion for Big Data and Analystics. <br>
+                                Supporting Code: <a href="https://github.com/athina-stewart/Pruning-and-Quantization-on-BERT-Model">here</a>  
                                 <br>
-                                My passion extends beyond the realm of programming; I love to express myself through music and play the piano, 
-                                violin, and the cello 🎻. Currently, I serve  as a student lab instructor at RIT, guiding and mentoring fellow 
-                                students. Additionally, I hold the position of Judging Director on the <a href="https://wichacks.io/" 
-                                target="_blank">WiCHacks</a> Committee, contributing to the vibrant tech community at RIT. <img src="images/star.gif" class="star image right">
                                 <br>
-                            </p>
+
+								<h4> The Problem</h4>
+								<p>   
+
+                                </p>
+
+								<h4> The Solution</h4>
+								<p>   
+
+                                </p>
+
+								<h4> Solution Design</h4>
+								<p> 
+
+								</p>
+							</div>
 						</div>
 					</div>
-
 
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
 							<section>
 								<h2>Get in touch</h2>
-								<form method="post" action="process_form.php">
+								<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
 											<input type="text" name="name" id="name" placeholder="Name" />
