--- a/project1.html
+++ b/project1.html
@@ -55,27 +55,30 @@
 								<h2>End to End Data Science Project | Python, Google Places API, Selenium</h2>
 							</div>
 
-							<h4> The Problem</h4>
-							<p> When purchasing a home, the common paths of searching for the right property would involve employing 
-								a realtor, or flipping through the newspaper to look at ads, where the seller has to pay for each inch
-								 of space their ad takes up. This leads to limited information and the seller will have to contact the
-								  buyer to acquire more information about the house. The buyer also lacks the ability to compare in 
-								  real time, different properties they may be interested in.  </p>
+							<div id="text-wrapper">
 
-							<h4> The Solution</h4>
-							<p> A housing recommendation system would integrate data from various websites offering a comprehensive 
-								and efficient solution for users searching for properties. By aggregating information from multiple 
-								sources, the system ensures a broader and more diverse set of available properties. This not only 
-								saves users time but also enhances the accuracy of recommendations, leveraging a variety of datasets. 
-								Users can input specific criteria and preferences, receiving personalized and relevant property 
-								suggestions. The system's ability to reduce bias associated with a single source, provide access to 
-								exclusive listings, and facilitate comparison shopping makes it a user-friendly and convenient tool. 
-								Additionally, dynamic updates ensure users have access to the latest information on housing options.   </p>
+								<h4> The Problem</h4>
+								<p> When purchasing a home, the common paths of searching for the right property would involve employing 
+									a realtor, or flipping through the newspaper to look at ads, where the seller has to pay for each inch
+									of space their ad takes up. This leads to limited information and the seller will have to contact the
+									buyer to acquire more information about the house. The buyer also lacks the ability to compare in 
+									real time, different properties they may be interested in.  </p>
 
-							<h4> Solution Design</h4>
-							<p> The first step was to aggregate information from various websites, using the Selenium and Beautiful 
-								Soup libraries. 
-							</p>
+								<h4> The Solution</h4>
+								<p> A housing recommendation system would integrate data from various websites offering a comprehensive 
+									and efficient solution for users searching for properties. By aggregating information from multiple 
+									sources, the system ensures a broader and more diverse set of available properties. This not only 
+									saves users time but also enhances the accuracy of recommendations, leveraging a variety of datasets. 
+									Users can input specific criteria and preferences, receiving personalized and relevant property 
+									suggestions. The system's ability to reduce bias associated with a single source, provide access to 
+									exclusive listings, and facilitate comparison shopping makes it a user-friendly and convenient tool. 
+									Additionally, dynamic updates ensure users have access to the latest information on housing options.   </p>
+
+								<h4> Solution Design</h4>
+								<p> The first step was to aggregate information from various websites, using the Selenium and Beautiful 
+									Soup libraries. 
+								</p>
+							</div>
 						</div>
 					</div>
 
