--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="aboutme.html">About Me</a></li>
 							<li><a href="https://drive.google.com/file/d/1v81FS_YGe7hk-wWHJMuCZXLnccwxNEtu/view?usp=sharing">Resume</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<!-- <li><a href="elements.html">Elements</a></li> -->
 						</ul>
 					</nav>
 
@@ -53,7 +53,13 @@
 								<div class="intro">
 									<h1>Hi! I'm Athina <img src="images/hummingbird.gif" class="hummingbird image"></h1>
 								</div>
-								<p>I'm an aspiring software engineer, currently pursuing an MS in Computer Science at the Rochester Institute of Technology.</p>
+								<p>I'm an aspiring software engineer, currently pursuing an MS in Computer Science at the 
+									Rochester Institute of Technology. I am passionate about tackling intricate projects, 
+									leveraging my inquisitive nature, intuition, and creativity to find innovative solutions.
+									<br>
+									<br> 
+									Please have a look at some of my work below.
+								</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -80,7 +86,7 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/christina-wocintechchat-com-LQ1t-8Ms5PY-unsplash.jpg" alt="" />
+										<img src="images/aaron-blanco-tejedor-aocUkMcxeqI-unsplash (1).jpg" alt="" />
 									</span>
 									<a href="project3.html">
 										<h2>BERT model</h2>
@@ -89,7 +95,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style4">
+								<!-- <article class="style4">
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
@@ -121,7 +127,7 @@
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
-								</article>
+								</article> -->
 							</section>
 						</div>
 					</div>
