Add information to project 3 as well as add link to dataset in project 2

--- a/project2.html
+++ b/project2.html
@@ -56,6 +56,12 @@
 							</div>
 
                             <div id="text-wrapper">
+                                You can find the dataset <a href="https://data.cityofnewyork.us/Public-Safety/Motor-Vehicle-Collisions-Crashes/h9gi-nx95">here</a>
+                                <br>
+                                Please send me a message for the supporting project code.
+
+                                <br>
+                                <br>
 
                                 <h4> The Problem</h4>
                                 <p>
