--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								</p>
 							</header>
 							<section class="tiles">
-								<article class="style1">
+								<!-- <article class="style1">
 									<span class="image">
 										<img src="images/houses2.jpg" alt="" />
 									</span>
@@ -72,7 +72,7 @@
 											<p>Personal Project || Data Science</p>
 										</div>
 									</a>
-								</article>
+								</article> -->
 								<article class="style2">
 									<span class="image">
 										<img src="images/car crash.jpg" alt="" />
