--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 							<section>
 								<h2>Let's Connect!</h2>
 								<p>Please get in touch with me by either sending an email or connecting with me on LinkedIn</p>
-								<form method="post" action="#">
+								<!-- <form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
 											<input type="text" name="name" id="name" placeholder="Name" />
@@ -153,7 +153,7 @@
 									<ul class="actions">
 										<li><input type="submit" value="Send" class="primary" /></li>
 									</ul>
-								</form>
+								</form> -->
 							</section>
 							<section>
 								<h2>Follow</h2>
