Added abstract to problem 2

--- a/project2.html
+++ b/project2.html
@@ -56,6 +56,17 @@
 							</div>
 
                             <div id="text-wrapper">
+                                <h4> Abstract</h4>
+                                <p>
+                                    This project conducts an in-depth analysis of car crash data provided by the City of New York, 
+                                    focusing on the five boroughs. The primary goal is to understand trends on both a macro scale 
+                                    (2019 and 2020) and within specific subsets: the months of June-July and the borough of Manhattan. 
+                                    The analysis includes temporal and spatial examinations, data preparation steps, and data 
+                                    clustering using the DB Scan algorithm. Key findings include insights into temporal patterns, 
+                                    hourly crash occurrences, and natural clustering of data. Challenges include data cleaning 
+                                    complexities and the high-dimensional feature space. This project underscores the significance 
+                                    of meticulous data preparation in extracting meaningful insights and making informed decisions.   
+                                </p>
                                 You can find the dataset <a href="https://data.cityofnewyork.us/Public-Safety/Motor-Vehicle-Collisions-Crashes/h9gi-nx95">here</a>
                                 <br>
                                 Please send me a message for the supporting project code.
