Added abstract for project 3

--- a/project2.html
+++ b/project2.html
@@ -67,7 +67,7 @@
                                     complexities and the high-dimensional feature space. This project underscores the significance 
                                     of meticulous data preparation in extracting meaningful insights and making informed decisions.   
                                 </p>
-                                You can find the dataset <a href="https://data.cityofnewyork.us/Public-Safety/Motor-Vehicle-Collisions-Crashes/h9gi-nx95">here</a>
+                                You can find the dataset <a href="https://data.cityofnewyork.us/Public-Safety/Motor-Vehicle-Collisions-Crashes/h9gi-nx95" target="_blank">here</a>
                                 <br>
                                 Please send me a message for the supporting project code.
 
