--- a/project3.html
+++ b/project3.html
@@ -57,6 +57,21 @@
 
 							<div id="text-wrapper">
 
+								<h4> Abstract</h4>
+								<p>
+									This project addresses the challenges in natural language understanding posed by the ambiguity and 
+									complexity of language. Focusing on Bidirectional Encoder Representations from Transformers 
+									(BERT), the study explores modifications such as pruning and quantization to enhance BERT's 
+									performance on General Language Understanding Evaluation (GLUE) benchmark tasks. BERT's 
+									bidirectional context understanding is crucial for language comprehension. The experiment 
+									hypothesizes that pruning and quantization will improve validation accuracy, considering 
+									potential benefits in model compression. Results demonstrate promising outcomes, with quantization 
+									effectively reducing model size without compromising accuracy. The study opens avenues for further 
+									exploration, including alternative pruning techniques and comparisons across language models, 
+									emphasizing the importance of ongoing research in optimizing compression strategies for advanced 
+									NLP models like BERT.
+								</p>
+
                                 The full paper for this project can be found <a href="https://drive.google.com/file/d/1WpmSys9bx4c8eKIp97KCL4m1KXh25h4h/view?usp=sharing" target="_blank">here</a>
                                 <br>
                                 Supporting Code: <a href="https://github.com/athina-stewart/Pruning-and-Quantization-on-BERT-Model" target="_blank">here</a>  
