--- a/project1.html
+++ b/project1.html
@@ -109,7 +109,7 @@
 								<ul class="icons">
 									<li><a href="https://github.com/athina-stewart" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="mailto:athina.stewart@gmail.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
-									<li><a href="https://www.linkedin.com/in/athinastewart/" class="icon solid style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://www.linkedin.com/in/athinastewart/" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
