--- a/aboutme.html
+++ b/aboutme.html
@@ -55,7 +55,7 @@
                                 <br>
                                 I have a background in chemical engineering and previously worked in cement manufacturing at Caribbean Cement 
                                 Compaly Ltd., a CEMEX subsidiary. I ventured into the tech space to explore my interest in software engineering, 
-                                and also discoverd a passion for Big Data and Analystics. <br>
+                                and also discoverd a passion for Big Data and Analytics. <br>
                                 <br>
                                 My passion extends beyond the realm of programming; I love to express myself through music and play the piano, 
                                 violin, and the cello 🎻. Currently, I serve  as a student lab instructor at RIT, guiding and mentoring fellow 
